# LyriLingual

./: README.md  pyproject.toml  tasks.py
lyri_lingual/: api.py  app.py  structures.py
lyri_lingual/templates/: index.html
lyri_lingue/: __init__.py  api.py  app.py  structures.py
lyri_lingue/static/: app.js  style.css
lyri_lingue/static/css/: style.css
lyri_lingue/templates/: index.html  lyrics.html
