[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LyriLingual"
version = "0.1.0"
description = "A music lyrics-based website."
dependencies = [
    "flask~=3.0.3",
    "requests~=2.32.3",
    "toml~=0.10.2",
]

[project.optional-dependencies]
dev = [
    "black~=24.4.2",
    "flake8~=7.1.0",
    "flake8-pyproject~=1.2.3",
    "isort~=5.13.2",
    "mypy~=1.10.0",
    "pytest~=8.2.2",
    "types-requests~=2.32.0.20240622",
    "types-toml~=0.10.8.20240310",
]

[tool.setuptools]
packages = ["lyri_lingual"]

[tool.flake8]
max-complexity = 10
max-line-length = 100
exclude = [
    ".venv",
    "build"
]

[tool.mypy]
python_version = "3.12"
exclude = "^(build|.venv)/"
